Add delete table route
